[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/MenuScene.gd" type="Script" id=1]
[ext_resource path="res://assets/image1942.png" type="Texture" id=3]
[ext_resource path="res://assets/duck.png" type="Texture" id=4]
[ext_resource path="res://assets/sky.png" type="Texture" id=5]
[ext_resource path="res://assets/background.png" type="Texture" id=6]
[ext_resource path="res://assets/foreground.png" type="Texture" id=7]
[ext_resource path="res://assets/bullet-blue.png" type="Texture" id=8]
[ext_resource path="res://assets/bullet-yellow.png" type="Texture" id=9]

[node name="MenuScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="sky" type="Sprite" parent="."]
position = Vector2( 136, 304 )
texture = ExtResource( 5 )

[node name="background" type="Sprite" parent="sky"]
position = Vector2( -64, 0 )
texture = ExtResource( 6 )

[node name="foreground" type="Sprite" parent="sky"]
position = Vector2( 152, 0 )
texture = ExtResource( 7 )

[node name="FullScreenButton" type="CheckButton" parent="sky"]
margin_left = 313.234
margin_top = 186.507
margin_right = 459.234
margin_bottom = 226.507
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 498.443
margin_top = 327.004
margin_right = 536.443
margin_bottom = 347.004
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryButton" type="Button" parent="."]
margin_left = 496.856
margin_top = 269.858
margin_right = 540.856
margin_bottom = 289.858
text = "Story"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="duck" type="Sprite" parent="Control"]
position = Vector2( -236, 280 )
texture = ExtResource( 4 )

[node name="image1942" type="Sprite" parent="Control"]
position = Vector2( 308, 256 )
scale = Vector2( 2.46923, 2.46923 )
texture = ExtResource( 3 )

[node name="bullet-yellow" type="Sprite" parent="."]
position = Vector2( 336, 272 )
texture = ExtResource( 9 )

[node name="bullet-blue" type="Sprite" parent="."]
position = Vector2( 664, 272 )
texture = ExtResource( 8 )
[connection signal="pressed" from="sky/FullScreenButton" to="." method="_on_FullScreenButton_pressed"]
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="StoryButton" to="." method="_on_StoryButton_pressed"]
